--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body style="background-color: black;">
+    <div id="container-incalzire" class="text-white"></div>
     <div class="container-temperaturi">
         <div class="container-temperatura-bazin">
             <h2 class="text-light">Temperatura bazin</h2>
